--- a/style.css
+++ b/style.css
@@ -1,110 +1,429 @@
-body {
-    margin: 0;
-    padding-top: 800px;
+html {
+    scroll-behavior: smooth;
 }
 
-.profile {
-    width: 175px;
-    margin-bottom: 50px;
-    border-radius: 50%;
+/*body {overflow: hidden;
 }
 
-#welcome {
+    background: radial-gradient(#111, #071a1a);
+    color: #fff; 
+*/
+.dashed-line {
+    border: 1px solid black;
+}
 
-    position: absolute;
-    height: 800px;
-    color: #FFFFFF;
-    left: 0;
+.my_nav_bar {
+    position: sticky !important;
     top: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 0.83;
-    background: linear-gradient(#60ebeb 0%, #27ae60 100%);
-    display: table;
-    width: 100%;
-    height: 100%;
-    z-index: 9
-}
-
-
-
-h1 {
-
-    font-size: 40px;
-    font-family: sans-serif;
-    font-weight: 300;
-    
-}
-
-#name {
-    font-size: 30px;
-    line-height: 1.2;
-    font-family: 'Cinzel Decorative', cursive;
+    z-index: 99;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 
 }
 
-h2 {
-    font-size: 30px;
-    font-weight: 300;
-    line-height: 1.2;
-    font-family: monospace
-}
-
-#bio {
-
-    padding: 50px;
+.collapse .navbar-collapse {
     text-align: center;
 }
 
-.line {
-    height: 6px;
-    background-color: #000;
-    width: 70px;
-    margin: 8px auto;
+.menuname {
+    font-weight: bold;
+    font-variant: small-caps;
+    color: #f3ae19 !important;
+    letter-spacing: 2px;
+
+}
+
+.menuli {
+
+    font-size: 16px;
+    font-weight: bold;
+    color: rgb(35, 228, 212) !important;
+    letter-spacing: 2px;
+    border-radius: 60px;
+
+}
+
+.menuli:hover{
+    background-color: white !important;
+}
+
+
+#welcome {
+    bottom: 0;
+    display: table;
+    width: 100%;
+    z-index: 9;
+    background-color: white;
+    /*background: linear-gradient(#071a1a, #0f3636)*/
+}
+
+#myCarousel {
+    display: table-cell;
+
+}
+
+.caroimg {
+
+    width: 600px;
+    margin-top: 10px;
+    margin-bottom: 50px;
+}
+
+.caroimg:hover {
+    box-shadow: 0 0 150px #3deaf7;
+    cursor: pointer;
+}
+
+.carousel-indicators li {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    border-color: black !important;
+
+}
+
+.carousel-indicators .active {
+    background-color: black !important;
+}
+
+.carousel-indicators {
+    bottom: -50px;
+
+}
+
+
+.sec1 {
+    background: white;
+    /*linear-gradient(#111, #0e3333, #1b5353); */
+}
+
+
+/* about section */
+
+
+#aboutakshimg {
+    border-width: 4px;
+    border-color: #f3ae19;
+}
+
+.aboutheading {
+    color: aqua;
+    font-size: 50px;
+    font-weight: bolder;
+    letter-spacing: 4px;
+    text-decoration: underline;
+    font-family: 'Cinzel Decorative', cursive;
+    font-variant: small-caps;
+}
+
+.aboutpara {
+    color: black;
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-family: monospace;
+}
+
+
+/* course section */
+
+.courseheading {
+    color: aqua;
+    font-size: 50px;
+    font-weight: bolder;
+    letter-spacing: 4px;
+    text-decoration: underline;
+    font-family: 'Cinzel Decorative', cursive;
+    font-variant: small-caps;
+    text-align: center;
+}
+
+.i1 {
+    font-size: 64px;
+    color: #f1951c;
+    justify-content: center;
+    display: inline-block;
+    animation: up-down 1s ease-in-out infinite;
+
+
+}
+
+.i1:hover {
+    animation-play-state: paused;
+
+}
+
+
+
+@keyframes up-down {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-10px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+/*
+#icondown1{
+    text-shadow: 0 0 30px #f1951c;
+}
+
+.i1 hover{
+   
+    transition: all 0.3s;
+    transform: scale(1.2);
+     box-shadow: 0 30px 45px -15px rgba(241,149,28,0.65);
+}
+*/
+
+#offer1 img {
+
+    border-top-left-radius: 120px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 120px;
+    border-bottom-left-radius: 20px;
+    border-width: 4px;
+    margin-bottom: 10px;
+    outline: 2px solid black;
+    padding: 14px;
+    height: 400px;
+    width: 350px;
+
+}
+
+#offer2 img {
+    border-top-left-radius: 120px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 120px;
+    border-bottom-left-radius: 20px;
+    border-width: 4px;
+    margin-bottom: 10px;
+    outline: 2px solid black;
+    padding: 14px;
+    height: 400px;
+    width: 350px;
+
+}
+
+
+#offerpara1 {
+    /* color: #f3ae19;*/
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-family: monospace;
+    text-align: justify;
+}
+
+
+#offerpara2 {
+    /* color: rgb(152, 206, 90);*/
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-family: monospace;
+    text-align: justify;
+}
+
+
+.courseoffer {
+    display: flex;
+    justify-content: center;
+}
+
+.offerdiv {
+    margin-right: 25px;
+    margin-left: 25px;
+    background-color: transparent;
+    text-align: center;
+    cursor: pointer;
+    justify-content: center;
+}
+
+
+/* contact section */
+
+.contactheading {
+    color: aqua;
+    font-size: 50px;
+    font-weight: bolder;
+    letter-spacing: 4px;
+    text-decoration: underline;
+    font-family: 'Cinzel Decorative', cursive;
+    font-variant: small-caps;
+    text-align: center;
+}
+
+.contactcont {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.box p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    color: white;
+    letter-spacing: 2px;
+}
+
+.box {
+    width: 55px;
+    height: 58px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    padding: 5px;
+    cursor: pointer;
+    margin: 0.6em;
+    transition: all .4s;
+    border-radius: 60px !important;
+
+}
+
+
+.box .icon {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 100px;
+    margin-right: 10px;
+    transition: all .4s;
+}
+
+.box:hover {
+    width: 220px;
+    background: #118625;
+    box-shadow: 0 0 50px #25d3657e;
+
+}
+
+.box:nth-child(2):hover {
+    width: 300px;
+    background: #550202;
+    box-shadow: 0 0 50px #e65e5480;
+}
+
+.box:nth-child(3):hover {
+    width: 220px;
+    background: #b517c4;
+    box-shadow: 0 0 50px #e696d47c;
+}
+
+.box:nth-child(4):hover {
+    width: 220px;
+    background: #1474f1;
+    box-shadow: 0 0 50px #1876f285;
+}
+
+.box:nth-child(5):hover {
+    width: 220px;
+    background: #1da1f2;
+    box-shadow: 0 0 50px #1da0f280;
 }
 
 
 p {
-    max-width: 450px;
-    margin: 25px auto;
-    font-size: 17px;
-    line-height: 1.3;
-}
-
-.parallax-inner {
-
-    display: table-cell;
-    position: relative;
-    text-align: center;
-    vertical-align: middle;
-
+    transform: translate(60px);
 }
 
 
-.menu {
+.instagram {
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+}
+
+.facebook {
+    background: #1877f2;
+}
+
+.twitter {
+    background: #1da1f2;
+}
+
+.whatsapp {
+    background: #25d366;
+}
+
+.mail {
+    background: #f31414;
+}
+
+.box:hover .icon {
+    border: 1px solid;
+}
+
+/*  background: white;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.26);
+        color: rgb(59, 59, 59);
+*/
+
+
+
+
+/* .sec2{
+    background: #34c920;
+    width: 140%;
+    margin-left: -20%;
+    margin-right: -20%;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 100%;
    
-    list-style: none;
-    font-family: sans-serif;
-    position:absolute;
-    top:10px;
-    right: 30px;
-    z-index: 10;
+    padding-top: 1em;
+}
+*/
+
+.feedback-form {
+    width: 500px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #f3ae19;
+    letter-spacing: 2px;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.form-group input,
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 20px;
+    border: 2px solid #1da1f2;
+    box-sizing: border-box;
+}
+
+.form-group textarea {
+    height: 100px;
+    resize: none;
+}
+
+.submit {
+    background-color: #f1951c;
+    color: white;
+    padding: 12px 20px;
+    border: 1px solid cyan;
+    border-radius: 60px;
     cursor: pointer;
+    font-size: larger;
 }
 
-.links {
-    float: left;
-    color: #fff;
-    padding-top: 5px;
-    padding-left: 9px;
-    padding-right: 9px;
-    padding-bottom: 5px;
-    font-family:fantasy;
-    font-size: 20px
-}
-
-
-
-.links:hover {
-    background-color:dodgerblue;
+.submit:hover {
+    background-color: #45a049;
 }
